cmake_minimum_required(VERSION 3.6)
project(hhugboy)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -static-libgcc -static-libstdc++ -std=c++11 -U__STRICT_ANSI__ -mwindows")

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_SOURCE_DIR}/bin")

set(SOURCE_FILES
        src/rendering/filters/Filter.cpp
        src/rendering/filters/Filter.h
        src/rendering/filters/filters.cpp
        src/rendering/filters/filters.h
        src/rendering/filters/scale2x.cpp
        src/rendering/filters/scale2x.h
        src/rendering/filters/scale3x.cpp
        src/rendering/filters/scale3x.h
        src/rendering/directdraw.cpp
        src/rendering/directdraw.h
        src/rendering/palette.cpp
        src/rendering/palette.h
        src/rendering/render.cpp
        src/rendering/render.h
        src/rendering/renderer.cpp
        src/rendering/renderer.h
        src/zlib/unzip.c
        src/zlib/unzip.h
        src/cheats.cpp
        src/cheats.h
        src/config.cpp
        src/config.h
        src/cpu.cpp
        src/cpu.h
        src/cpucore.h
        src/debug.cpp
        src/debug.h
        src/devices.cpp
        src/devices.h
        src/ui/dialogs.cpp
        src/ui/dialogs.h
        src/directinput.cpp
        src/directinput.h
        src/GB.cpp
        src/GB.h
        src/GB_gfx.cpp
        src/GB_gfx.h
        src/memory/GB_MBC.h
        src/memory/GB_ioregs.cpp
        src/memory/GB_MBC.cpp
        src/memory/GB_mem.cpp
        src/GB_sound.cpp
        src/ui/keynames.h
        src/licnames.h
        src/main.cpp
        src/main.h
        src/ui/menu.cpp
        src/ui/menu.rc
        src/mainloop.cpp
        src/mainloop.h
        src/ui/menu.h
        src/options.h
        src/rom.cpp
        src/rom.h
        src/SGB.cpp
        src/SGB.h
        src/sound.h
        src/ui/strings.cpp
        src/ui/strings.h
        src/types.h
        src/version.rc
        src/memory/mbc/BasicMbc.cpp
        src/memory/mbc/BasicMbc.h
        src/memory/mbc/MbcNin3.cpp
        src/memory/mbc/MbcNin3.h
        src/memory/mbc/MbcNin7.cpp
        src/memory/mbc/MbcNin7.h
        src/memory/mbc/MbcLicHuc3.cpp
        src/memory/mbc/MbcLicHuc3.h
        src/memory/mbc/MbcLicTama5.cpp
        src/memory/mbc/MbcLicTama5.h
        src/memory/mbc/MbcUnlSintax.cpp
        src/memory/mbc/MbcUnlSintax.h
        src/memory/mbc/AbstractMbc.cpp
        src/memory/mbc/AbstractMbc.h
        src/memory/mbc/MbcNinCamera.cpp
        src/memory/mbc/MbcNinCamera.h
        src/memory/mbc/RomOnly.cpp
        src/memory/mbc/RomOnly.h
        src/memory/mbc/MbcNin5.cpp
        src/memory/mbc/MbcNin5.h
        src/memory/mbc/MbcUnlLiCheng.cpp
        src/memory/mbc/MbcUnlLiCheng.h
        src/memory/mbc/MbcUnlPoke2in1.cpp
        src/memory/mbc/MbcUnlPoke2in1.h
        src/memory/mbc/MbcNin2.cpp
        src/memory/mbc/MbcNin2.h
        src/memory/mbc/MbcUnlRockman8.cpp
        src/memory/mbc/MbcUnlRockman8.h
        src/memory/mbc/MbcLicMk12.cpp
        src/memory/mbc/MbcLicMk12.h
        src/memory/mbc/MbcNin1Multi.cpp
        src/memory/mbc/MbcNin1Multi.h
        src/memory/mbc/MbcLicMmm01.cpp
        src/memory/mbc/MbcLicMmm01.h
        src/memory/mbc/MbcNin1.cpp
        src/memory/mbc/MbcNin1.h
        src/memory/mbc/MbcUnlSachen8in1.cpp
        src/memory/mbc/MbcUnlSachen8in1.h
        src/memory/mbc/MbcUnlLbMulti.cpp
        src/memory/mbc/MbcUnlLbMulti.h
        src/memory/mbc/MbcUnlBbd.cpp
        src/memory/mbc/MbcUnlBbd.h
        src/memory/mbc/MbcUnlDbzTrans.cpp
        src/memory/mbc/MbcUnlDbzTrans.h
        src/memory/MbcType.h
        src/memory/mbc/MbcUnlHitek.cpp
        src/memory/mbc/MbcUnlHitek.h
        src/memory/mbc/MbcUnlNtOld1.cpp
        src/memory/mbc/MbcUnlNtOld1.h
        src/memory/mbc/MbcUnlNtOld2.cpp
        src/memory/mbc/MbcUnlNtOld2.h
        src/memory/CartDetection.h
        src/memory/CartDetection.cpp
        src/ui/menuactions.cpp
        src/ui/menuactions.h
        src/ui/keyactions.cpp
        src/ui/keyactions.h
        src/ui/window.cpp
        src/ui/window.h
        src/memory/mbc/MbcUnlNtNew.cpp
        src/memory/mbc/MbcUnlNtNew.h
        src/memory/GbxParser.cpp
        src/memory/GbxParser.h
        src/linker.cpp
        src/linker.h
)

include_directories(
        includes
        includes/zlib
        includes/libpng12
        includes/fmod
        includes/directx-aug2009
        includes/png++-0.2.5
)

link_libraries(
        "${CMAKE_SOURCE_DIR}/libs/libfmod.a"
        "${CMAKE_SOURCE_DIR}/libs/libwinmm.a"
        "${CMAKE_SOURCE_DIR}/libs/libdinput.a"
        "${CMAKE_SOURCE_DIR}/libs/libddraw.a"
        "${CMAKE_SOURCE_DIR}/libs/libdinput.a"
        "${CMAKE_SOURCE_DIR}/libs/libdinput8.a"
        "${CMAKE_SOURCE_DIR}/libs/libdxguid.a"
        "${CMAKE_SOURCE_DIR}/libs/libpng12.dll.a"
        "${CMAKE_SOURCE_DIR}/libs/libz.a"
)

add_executable(hhugboy ${SOURCE_FILES})
set_target_properties(hhugboy PROPERTIES LINKER_LANGUAGE CXX)
add_executable(hhugboy-debug ${SOURCE_FILES})
set_target_properties(hhugboy-debug PROPERTIES LINKER_LANGUAGE CXX)